# multi-agent-system

./: .gitignore  CX AI -SAD .docx  README.md  pyproject.toml
.kiro/specs/multi-agent-system/: design.md  requirements.md  tasks.md
infrastructure/cdk/: app.py  requirements.txt
infrastructure/cdk/stacks/: __init__.py  division_gateway_stack.py  enterprise_registry_stack.py  message_router_stack.py  monitoring_stack.py  security_stack.py  tool_registry_stack.py
scripts/: deploy.py
src/agents/: README.md
src/division-gateways/: README.md
src/shared/: README.md  config.py
src/shared/interfaces/: __init__.py  agent_interface.py  gateway_interface.py  message_interface.py  tool_interface.py
src/shared/models/: __init__.py  agent_models.py  division_models.py  message_models.py  tool_models.py
src/tools/: README.md
